# pdd-auto-reply

./: .env.example  .gitignore  LICENSE  README.md  build.sh  deploy.sh  docker-compose.ghcr.yml  docker-compose.yml  update.sh
.github/workflows/: docker-deploy.yml
backend/: Dockerfile  _bootstrap.py  main.py  pyproject.toml
backend/app/: __init__.py
backend/app/api/: __init__.py  deps.py  router.py
backend/app/api/routes/: __init__.py  ai_config.py  announcements.py  auth.py  backup.py  blacklist.py  business_hours.py  captcha.py  chat.py  chat_context.py  chat_ws.py  dashboard.py  feedback.py  internal_chat.py  keywords.py  knowledge.py  logs.py  message_filters.py  notify.py  products.py  profile.py  replies.py  risk_control.py  roles.py  scheduled_tasks.py  settings.py  shops.py  transfer.py  users.py
backend/app/core/: __init__.py  business_codes.py  data_scope.py  errors.py  permission.py  token_blacklist.py
backend/app/services/: __init__.py  account_service.py  ai_config_service.py  announcement_service.py  auth_service.py  backup_service.py  business_hours_service.py  captcha_service.py  chat_context_service.py  chat_push_hub.py  chat_send_client.py  chat_service.py  chat_sync_client.py  connection_notify.py  cs_knowledge_service.py  dashboard_service.py  email_code_service.py  feedback_service.py  filter_service.py  image_captcha_service.py  keyword_service.py  log_service.py  notify_service.py  product_knowledge_service.py  product_service.py  product_spec_backfill.py  product_spec_codec.py  product_sync_client.py  profile_service.py  reply_service.py  risk_control_service.py  role_service.py  scheduled_task_service.py  setting_service.py  setting_store.py  shop_login_client.py  smtp_proxy_service.py  transfer_client.py  transfer_service.py  user_service.py
backend/static/: .gitkeep
backend/tests/: __init__.py  conftest.py  test_account_service.py  test_ai_provider_models.py  test_announcement_feedback_api.py  test_auth_api.py  test_backup_api.py  test_business_hours_service.py  test_captcha_api.py  test_chat_api.py  test_chat_context_api.py  test_dashboard_api.py  test_data_scope_property.py  test_filter_blacklist_api.py  test_keywords_api.py  test_knowledge_api.py  test_logs_api.py  test_menu_resources_api.py  test_notify_api.py  test_permission_check_property.py  test_permission_visible_menus_property.py  test_products_api.py  test_profile_api.py  test_replies_api.py  test_risk_control_api.py  test_role_permission_migration.py  test_role_service.py  test_scheduled_tasks_api.py  test_settings_api.py  test_smtp_proxy_api.py  test_transfer_api.py  test_user_service.py  test_users_api.py
common/: __init__.py  pyproject.toml
common/core/: __init__.py  config.py
common/db/: __init__.py  init_database.py  repository.py  retry.py  session.py
common/models/: __init__.py  base.py  config_models.py  knowledge_models.py  log_models.py  reply_models.py  setting_models.py  shop_models.py  task_models.py  user_models.py
common/schemas/: __init__.py  common.py  sanitize.py
common/services/: __init__.py  admin_seed.py  ai_provider_service.py  dict_seed_data.py  dict_service.py  kb_service.py  service_client.py
common/tests/: __init__.py  conftest.py  test_dict_service.py  test_kb_service.py  test_migration_idempotent_property.py  test_repository_paginate_property.py  test_repository_soft_delete_property.py  test_repository_upsert_property.py  test_response_property.py  test_sanitize_property.py  test_security_password_property.py  test_security_token_property.py  test_time_utils_property.py
common/utils/: __init__.py  crypto.py  pagination.py  security.py  time_utils.py
frontend/: .gitignore  Dockerfile  index.html  jsconfig.json  nginx.conf  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: announcements_api.js  auth_api.js  auto_reply_api.js  chat_api.js  dashboard_api.js  feedback_api.js  index.js  keyword_api.js  knowledge_api.js  logs_api.js  notify_api.js  product_api.js  reply_api.js  risk_control_api.js  scheduled_tasks_api.js  settings_api.js  shop_api.js  users_api.js
frontend/src/config/: navigation.js
frontend/src/pages/: about.vue  (+16 more)
scheduler/: Dockerfile  _bootstrap.py  main.py  pyproject.toml
scheduler/tasks/: __init__.py  constants.py  log_cleanup.py  scheduler_service.py  service_client.py  task_run_log.py  task_runners.py
scheduler/tests/: __init__.py  conftest.py  test_log_cleanup_property.py  test_scheduler_service.py
websocket/: Dockerfile  _bootstrap.py  main.py  pyproject.toml
websocket/agent/: __init__.py  agent_config.py  ai_reply_engine.py  goods_card_fallback.py  llm_client.py  tools.py
websocket/channel_pdd/: __init__.py  chat_event_forwarder.py  connection_manager.py  connection_registry.py  message_queue.py  pdd_channel.py  pdd_login.py  pdd_message.py  transfer_service.py
websocket/channel_pdd/api/: __init__.py  get_chat_history.py  get_conversations.py  get_product_detail.py  get_product_list.py  get_shop_info.py  get_token.py  get_user_info.py  send_message.py  set_cs_status.py
websocket/channel_pdd/core/: __init__.py  anti_content.py  base_request.py  connection_state_machine.py  connection_status.py  credential_store.py  login_state_store.py  pdd_config.py  pdd_token.py  session_relogin.py
websocket/engine/: __init__.py  business_hours.py  keyword_matcher.py  message_consumer.py  message_filter.py  reply_engine.py  risk_control.py
websocket/login/: __init__.py  cookie_import.py  playwright_login.py
websocket/routes/: __init__.py  connections.py  cookies.py  login.py  messages.py  products.py
websocket/tests/: __init__.py  conftest.py  test_ai_reply_engine.py  test_anti_content.py  test_base_request.py  test_business_hours_property.py  test_connection_state_machine.py  test_goods_card_fallback.py  test_keyword_matcher.py  test_message_consumer.py  test_message_filter.py  test_message_queue.py  test_pdd_channel.py  test_pdd_message.py  test_reply_engine.py  test_send_message.py  test_transfer_service.py
(+52 files in other folders)
