# pyproject.toml —— backend 服务依赖与打包配置
# ================================================
# 本文件用途：声明「拼多多自动回复」系统 backend（HTTP API 服务，默认端口 8089）
# 的运行期依赖与打包元数据。backend 启动入口统一为同目录 main.py（最小入口桩，
# 规范 32），应用装配见 _bootstrap.py。
#
# 规范 33：打包时易出现「检测到多个顶级目录」错误，故在 [tool.setuptools] 中
# 显式声明 packages 列表（本服务包 app 及其全部子包），不依赖自动发现。
# common 公共库由各服务通过 sys.path 共享引用（见 main.py），不在本服务内打包。

[project]
name = "pdd-auto-reply-backend"
version = "0.1.0"
description = "拼多多自动回复系统 - backend（HTTP API 服务，默认端口 8089）"
requires-python = ">=3.11"

# backend 运行期依赖：
# - fastapi：ASGI Web 框架，承载全部对外 REST 接口。
# - uvicorn[standard]：ASGI 服务器（含高性能事件循环与 WebSocket 等扩展）。
# - pydantic / pydantic-settings：数据结构校验与环境变量配置加载。
# - PyMySQL / SQLAlchemy：MySQL 连接与参数化查询（规范 8/16）。
# - python-multipart：表单与文件上传解析（静态/上传相关接口需要）。
# 说明：common 公共库经 sys.path 共享引用，其自身依赖由 common/pyproject.toml 管理。
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "PyMySQL>=1.1.0",
    "SQLAlchemy>=2.0.0",
    "python-multipart>=0.0.9",
    "Pillow>=10.0.0",
]

# 可选依赖：测试相关（属性测试统一采用 Hypothesis，最少 100 次迭代）。
[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "httpx>=0.27.0",
    "hypothesis>=6.90.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

# 显式声明 packages 列表（规范 33）：声明本服务包 app 及其全部子包，
# 避免自动发现时报「检测到多个顶级目录」打包错误。
[tool.setuptools]
packages = [
    "app",
    "app.api",
    "app.api.routes",
    "app.services",
    "app.core",
]
